# yasmin_pyrobosim

./: README.md
yasmin_pyrobosim/: CMakeLists.txt  package.xml  plugins.xml
yasmin_pyrobosim/resource/: plugins.xml
yasmin_pyrobosim/src/: check_same_location_state.cpp  detect_objects_state.cpp  get_next_location_state.cpp  get_next_object_state.cpp  get_robot_params_state.cpp  get_world_state_state.cpp  navigate_state.cpp  order_locations_state.cpp  pick_object_state.cpp  pick_random_location.cpp  place_object_state.cpp
yasmin_pyrobosim/state_machines/: clean_waste.xml  get_initial_data.xml  navigate_once.xml  navigate_random.xml  patrol.xml  patrol_sm.xml  patrol_with_detect.xml
yasmin_pyrobosim_bringup/: CMakeLists.txt  package.xml
yasmin_pyrobosim_bringup/launch/: pyrobosim.launch.py  run_demo.launch.py
yasmin_pyrobosim_bringup/worlds/: roscon_2024_workshop_world.yaml
yasmin_pyrobosim_bringup/yasmin_pyrobosim_bringup/: run_world.py
